# catkin_ws_control

./: .gitignore  README.md  imgui.ini
bash_files/: can_connect.sh  setup_controller_script.sh
can_setup/: can_setup.sh
can_setup/driver/: .Module.symvers.cmd  .modules.order.cmd  .pcan.ko.cmd  .pcan.mod.cmd  .pcan.mod.o.cmd  .pcan.o.cmd  dkms.conf  modules.order  pcan.mod.c
can_setup/driver/src/: .pcan_common.o.cmd  .pcan_fifo.o.cmd  .pcan_filter.o.cmd  .pcan_fops.o.cmd  .pcan_isa.o.cmd  .pcan_main.o.cmd  .pcan_netdev.o.cmd  .pcan_parse.o.cmd  .pcan_pci.o.cmd  .pcan_pci_spi.o.cmd  .pcan_pciec.o.cmd  .pcan_sja1000.o.cmd  .pcan_timing.o.cmd  .pcan_usb.o.cmd  .pcan_usb_core.o.cmd  .pcan_usbpro.o.cmd  .pcanfd_core.o.cmd  .pcanfd_pci.o.cmd  .pcanfd_ucan.o.cmd  .pcanfd_usb.o.cmd
can_setup/lib/lib/: libpcan.so.6  libpcanfd.so.8
can_setup/libpcanbasic/pcaninfo/: pcaninfo.1.2.0
can_setup/test/: bitratetest  filtertest  pcan-settings  pcanfdtst  receivetest  receivetest_posix  transmitest  transmitest_posix
sensor_config_files/: axia_config.txt  set_joint_reference_to_zero.txt
src/automatic_control/: CMakeLists.txt  package.xml
src/automatic_control/include/: automatic_control.h  needle_experiment_trajectory.h
src/automatic_control/launch/: automatic_control.launch
src/automatic_control/src/: automatic_control.cpp  automatic_control_node.cpp  needle_experiment_trajectory.cpp
src/axia_ft_processing/: CMakeLists.txt  package.xml
src/axia_ft_processing/draft/: axia_ft_processing.cpp  axia_ft_processing.h
src/axia_ft_processing/include/: axia_ft_processing.h  low_pass_filter_eigen.h
src/axia_ft_processing/launch/: axia_ft_processing.launch
src/axia_ft_processing/src/: axia_ft_processing.cpp  axia_ft_processing_node.cpp  low_pass_filter_eigen.cpp
src/cameras/camera_control/: CMakeLists.txt  package.xml
src/cameras/daheng_camera/: CMakeLists.txt  package.xml  setup.py
src/cameras/gxipy/: CMakeLists.txt
src/cameras/image_processing/: CMakeLists.txt  package.xml
src/cameras/needle_detection/: CMakeLists.txt  package.xml  setup.py
src/cartesian_msgs/: CMakeLists.txt  package.xml
src/cartesian_msgs/msg/: CartesianGoal.msg  CartesianPose.msg
src/image_msgs/: CMakeLists.txt  package.xml
src/image_msgs/msg/: CompressedImageCustom.msg  ImagesSynchronized.msg  ImagesSynchronizedCompressed.msg
src/needle_vibration_experiment/: CMakeLists.txt  package.xml
src/needle_vibration_experiment/include/: nve_application.h  nve_ft_processing.h
src/needle_vibration_experiment/launch/: nve.launch
src/needle_vibration_experiment/src/: needle_vibration_experiment_node.cpp  nve_application.cpp  nve_ft_processing.cpp
src/parameters_msgs/: CMakeLists.txt  package.xml
src/parameters_msgs/msg/: NeedleVibrationExperiment.msg  Vision.msg
src/schunk_lwa4p/lwa4p_bringup/: CMakeLists.txt  package.xml
src/schunk_lwa4p/lwa4p_bringup/config/: Schunk_0_63.dcf  arm_controller.yaml  arm_driver.yaml
src/schunk_lwa4p/lwa4p_bringup/launch/: lwa4p_bringup.launch
src/schunk_lwa4p/lwa4p_description/: CMakeLists.txt  package.xml
src/schunk_lwa4p/lwa4p_description/meshes/: lwa4p_link0.stl  lwa4p_link1.stl  lwa4p_link2.stl  lwa4p_link3.stl  lwa4p_link4.stl  lwa4p_link5.stl  lwa4p_link6.stl
src/schunk_lwa4p/lwa4p_description/urdf/: common.xacro  lwa4p.transmission.xacro  lwa4p.urdf.xacro  lwa4p_robot.urdf.xacro
src/schunk_lwa4p/lwa4p_moveit_config/: .setup_assistant  CMakeLists.txt  (+1 more)
src/schunk_lwa4p/lwa4p_robot_controller/: CMakeLists.txt  package.xml
src/schunk_lwa4p/lwa4p_robot_controller/include/: robot_control.h
src/schunk_lwa4p/lwa4p_robot_controller/launch/: lwa4p_robot_controller.launch
src/schunk_lwa4p/lwa4p_robot_controller/src/: lwa4p_robot_controller_node.cpp  robot_control.cpp
src/schunk_lwa4p/lwa4p_state/: CMakeLists.txt  package.xml
src/schunk_lwa4p/lwa4p_state/include/: lwa4p_state_handler.h
src/schunk_lwa4p/lwa4p_state/launch/: lwa4p_state.launch
src/schunk_lwa4p/lwa4p_state/src/: lwa4p_state_handler.cpp  lwa4p_state_node.cpp
src/setup_controller/: CMakeLists.txt  imgui.ini  package.xml
src/setup_controller/include/: affine4d.h  animation_interface.h  application_interface.h  camera_window.h  control_panel_window.h  experiment_window.h  joystick_interface.h  lwa4p_forward_kinematics.h  lwa4p_interface.h  parameters_interface.h  ros_interface.h  state_handler.h  user_interface.h  utils.h  vision_interface.h
src/setup_controller/launch/: setup_controller.launch  setup_controller_node.launch
src/setup_controller/libs/: CMakeLists.txt
src/setup_controller/libs/animation/: CMakeLists.txt  scene.hpp
src/setup_controller/libs/animation/include/: callback_handler.h  callback_setter.h  camera.h  display.h  euler_rotations_anim.h  filesystem.h  imported_surface.h  indexed_model.h  mesh.h  obj_loader.h  object.h  object_type.hpp  rd.h  root_directory.h  shader.h  texture.h  trajectory_handler.h
src/setup_controller/libs/animation/include/primitives/: box.cpp  box.h  line.cpp  line.h  point.cpp  point.h
src/setup_controller/libs/animation/libs/: CMakeLists.txt
src/setup_controller/libs/animation/share/: simpleShader.fs
src/setup_controller/libs/animation/src/: callback_handler.cpp  callback_setter.cpp  camera.cpp  display.cpp  euler_rotations_anim.cpp  filesystem.cpp  imported_surface.cpp  indexed_model.cpp  mesh.cpp  obj_loader.cpp  shader.cpp  texture.cpp  trajectory_handler.cpp
src/setup_controller/objects/floor/: floor.mtl
src/setup_controller/objects/lwa4p/: lwa4p_link0.mtl  lwa4p_link1.mtl  lwa4p_link3.mtl  lwa4p_link4.mtl  lwa4p_link5.mtl  lwa4p_link6.mtl
src/setup_controller/objects/table/: table.mtl
src/setup_controller/src/: affine4d.cpp  animation_interface.cpp  application_interface.cpp  camera_window.cpp  control_panel_window.cpp  experiment_window.cpp  joystick_interface.cpp  lwa4p_forward_kinematics.cpp  lwa4p_interface.cpp  parameters_interface.cpp  ros_interface.cpp  setup_controller_node.cpp  state_handler.cpp  user_interface.cpp  utils.cpp  vision_interface.cpp
src/smch_msgs/: CMakeLists.txt  package.xml
(+42 files in other folders)
